tests/file_test/testdata/else_if_then_eof.llang
if 3 > 4 {return 7; } else if x
